examples/kustomize-nginx-ingress/nginx-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: nginx-port
